@@ -166,7 +166,7 @@ fields:
 - ``display_name`` (optional): the team display name. If provided, will display
   this instead of the team name in certain places, like the scoreboard
 - ``organization_id``: the ID of the team affiliation this team belongs to
-- ``room`` (optional): the room of the team
+- ``location`` (optional): the location of the team
 
 If the ``data_source`` setting of DOMjudge is set to external, the ``id`` field will be the
 ID used for the team and the ``group_ids`` and ``organization_id`` fields are the values as
@@ -183,7 +183,7 @@ Example ``teams.json``::
     "group_ids": ["24"],
     "name": "¡i¡i¡",
     "organization_id": "INST-42",
-    "room": "AUD 10"
+    "location": "AUD 10"
   }, {
     "id": "2",
     "icpc_id": "447837",
