@@ -91,10 +91,10 @@ class BalloonController extends AbstractController
         if (isset($filters['location-str'])) {
             /** @var Team[] $filteredLocations */
             $filteredLocations = $this->em->createQueryBuilder()
-                ->from(Team::class, 'a', 'a.room')
+                ->from(Team::class, 'a', 'a.location')
                 ->select('a')
-                ->where('a.room IN (:rooms)')
-                ->setParameter('rooms', $filters['location-str'])
+                ->where('a.location IN (:locations)')
+                ->setParameter('locations', $filters['location-str'])
                 ->getQuery()
                 ->getResult();
         }
