@@ -46,8 +46,8 @@
                         <select id="location-filter" class="select2 form-control" multiple data-filter-field="location-str"
                                 data-ajax-url="{{ path('jury_ajax_data', {datatype: 'locations', select2: true}) }}">
                             {%- for location in filteredLocations %}
-                                <option value="{{ location.room }}" selected>
-                                    {{ location.room }}
+                                <option value="{{ location.location }}" selected>
+                                    {{ location.location }}
                                 </option>
                             {%- endfor %}
                         </select>
