@@ -12,7 +12,7 @@
         {{ form_row(form.publicdescription) }}
         {{ form_row(form.affiliation) }}
         {{ form_row(form.penalty) }}
-        {{ form_row(form.room) }}
+        {{ form_row(form.location) }}
         {{ form_row(form.internalcomments) }}
         {{ form_row(form.contests) }}
         {{ form_row(form.enabled) }}
