@@ -85,10 +85,10 @@
                         <td>{{ team.penalty }}</td>
                     </tr>
                 {% endif %}
-                {% if team.room %}
+                {% if team.location %}
                     <tr>
                         <th>Location</th>
-                        <td>{{ team.room }}</td>
+                        <td>{{ team.location }}</td>
                     </tr>
                 {% endif %}
                 <tr>
